<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swlab.xpress420.rates">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/rates_bg">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Rates"
                android:textSize="34sp"
                android:textColor="#d1d1d1"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="22sp"/>

            <Spinner
            android:id="@+id/from_spinner"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:entries="@array/cities_array"
            android:prompt="@string/choose_city" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/to"
                android:textSize="22sp"/>

            <Spinner
                android:id="@+id/to_spinner"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:entries="@array/cities_array"
                android:prompt="@string/choose_city" />


            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/weight"
                android:textSize="22sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="numberSigned" />

                <TextView
                    android:id="@+id/kg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Kg"
                    android:textSize="17sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView99"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/shipping_method"
                android:textSize="22sp"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:checkedButton="@+id/standard_rb">

                <RadioButton
                    android:id="@+id/standard_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard" />

                <RadioButton
                    android:id="@+id/express_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/express" />

            </RadioGroup>

            <Button
                android:id="@+id/get_estimate_btn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/get_estimate"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/display_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>