<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swlab.xpress420.ShipmentSummary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/login">

            <TextView
                android:id="@+id/shipment_summary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Shipment Summary"
                android:textColor="#d1d1d1"
                android:textSize="34sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/from_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/sender_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sender_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_address"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sender_city_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/sender_city_zipcode"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/to_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/receiver_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/receiver_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_address"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/receiver_city_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_city_zipcode"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/shipping_method_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Shipping Method:"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@+id/standard_rb">

                <RadioButton
                    android:id="@+id/standard_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/standard"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"/>

                <RadioButton
                    android:id="@+id/express_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="5dp"
                    android:text="@string/express" />

            </RadioGroup>

            <TextView
                android:id="@+id/order_details_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Order Details:"
                android:textSize="18sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/shipment_charges_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Shipment charges"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/shipment_charges_cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rs. x"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/delivery_charges_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Standard shipping charges"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/delivery_charges_cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rs. 0.0"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fragile_charges_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/fragile_charges_cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/total_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Total"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/total_cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rs. 0.0"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/payment_btn"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/continue_to_payment"
                android:layout_gravity="center"
                android:textColor="@android:color/white"/>



        </LinearLayout>

    </LinearLayout>

</ScrollView>