<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.swlab.xpress420.ShipmentDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/login">

            <TextView
                android:id="@+id/shipment_summary_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Shipment Details"
                android:textColor="#d1d1d1"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/order_id_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shipment_summary_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="21dp"
                android:text="Order ID:"
                android:textColor="#d1d1d1"
                android:textSize="20sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/from_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/sender_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sender_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sender_address"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/to_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="18sp"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/receiver_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/receiver_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiver_address"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/poo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Shipping Method:"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/shipping_method_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipping_method"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="15sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/parcel_details_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Parcel Details:"
                android:textSize="18sp" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/delivery_charges_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weight:"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/weight_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.0 Kg (Fragile)"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/parv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Payment Details:"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cost_ettv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cost:"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/cost_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0.0 Kg (Fragile)"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cotv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Payment method:"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/pm_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Cash on pickup (COP)"
                    android:gravity="right"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/track_btn"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:backgroundTint="@android:color/holo_green_light"
                    android:text="Track"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="150dp"
                    android:layout_height="65dp"
                    android:layout_gravity="right"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:text="Cancel"
                    android:textColor="@android:color/white" />

            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

</ScrollView>
